--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -24,7 +24,7 @@
   <string name="shortcut_erase_short_label">Eliminar</string>
   <string name="shortcut_erase_long_label">Eliminar historial de navegación</string>
   <string name="text_selection_search_action">Búsqueda privada</string>
-  <string name="about_content"><![CDATA[<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s te da el control.</p>\n<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"&#218;salo como navegador privado:\n  "<ul>"\n    "<li>Busca y navega en la propia aplicaci&#243;n</li>"\n    "<li>Bloquea a los rastreadores (o cambia los ajustes para permitirlos)</li>"\n    "<li>Limpia para borrar cookies y los historiales de b&#250;squeda y navegaci&#243;n</li>"\n  "</ul>\n</p>\n<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">Mozilla es la autora de %1$s. Nuestra misi&#243;n es promover un Internet saludable y abierto.<br/>\n<a href="%2$s">Descubre m&#225;s</a></p>]]></string>
+  <string name="about_content"><![CDATA[<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s te da el control.</p>\\n<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"&amp;#218;salo como navegador privado:\\n  \""<ul>"\"\\n    \""<li>Busca y navega en la propia aplicaci&amp;#243;n</li>"\"\\n    \""<li>Bloquea a los rastreadores (o cambia los ajustes para permitirlos)</li>"\"\\n    \""<li>Limpia para borrar cookies y los historiales de b&amp;#250;squeda y navegaci&amp;#243;n</li>"\"\\n  \""</ul>\\n</p>\\n<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">Mozilla es la autora de %1$s. Nuestra misi&amp;#243;n es promover un Internet saludable y abierto.<br/>\\n<a href="%2$s">Descubre m&amp;#225;s</a></p>]]></string>
   <string name="preference_category_search">Búsqueda</string>
   <string name="preference_search_engine_default">Predeterminado</string>
   <string name="preference_state_on">Activado</string>
@@ -99,6 +99,7 @@
   <string name="accessibility_announcement_search">Añadir motor de búsqueda</string>
   <string name="search_add_confirmation">Nuevo motor de búsqueda añadido.</string>
   <string name="search_add_error_empty_name">Introducir nombre del motor de búsqueda</string>
+  <string name="search_add_error_duplicate_name">Ese nombre ya está en uso por un motor de búsqueda.</string>
   <string name="search_add_error_empty_search">Introducir cadena de búsqueda</string>
   <string name="search_add_error_format">Comprueba que la cadena de búsqueda coincide con el formato del ejemplo</string>
   <string name="content_description_clear_input">Limpiar registro</string>
@@ -127,25 +128,25 @@
   <string name="external_multiple_apps_matched_exit">¿Salir de la navegación privada?</string>
   <string name="download_snackbar_finished">%1$s completado</string>
   <string name="download_snackbar_open">Abrir</string>
-  <string name="download_dialog_warning"><![CDATA["Los archivos descargados "<b xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">no ser&#225;n eliminados</b>" cuando borres el historial de %1$s."]]></string>
+  <string name="download_dialog_warning"><![CDATA[\"Los archivos descargados \"<b xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">no ser&amp;#225;n eliminados</b>\" cuando borres el historial de %1$s.\"]]></string>
   <string name="download_dialog_title">Descargar archivo</string>
   <string name="download_dialog_action_cancel">Cancelar</string>
   <string name="download_dialog_action_download">Descargar</string>
   <string name="errorpage_title">Problema al cargar la página</string>
   <string name="errorpage_refresh">Vuelve a intentarlo</string>
   <string name="error_connectionfailure_title">No se puede conectar</string>
-  <string name="error_connectionfailure_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n        "<li>Puede que el sitio est&#233; ocupado o no est&#233; disponible temporalmente. Vuelve a intentarlo en unos minutos.</li>"\n        "<li>Si no puedes cargar ninguna p&#225;gina, comprueba la conexi&#243;n de datos o Wi-Fi de tu dispositivo.</li>"\n      "</ul>]]></string>
+  <string name="error_connectionfailure_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n        \""<li>Puede que el sitio est&amp;#233; ocupado o no est&amp;#233; disponible temporalmente. Vuelve a intentarlo en unos minutos.</li>"\"\\n        \""<li>Si no puedes cargar ninguna p&amp;#225;gina, comprueba la conexi&amp;#243;n de datos o Wi-Fi de tu dispositivo.</li>"\"\\n      \""</ul>]]></string>
   <string name="error_timeout_title">La conexión ha caducado</string>
   <string name="error_hostLookup_title">Servidor no encontrado</string>
-  <string name="error_hostLookup_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n        "<li>"Comprueba que la direcci&#243;n no tiene ning&#250;n error como\n          "<strong>ww</strong>".example.com en vez de\n          "<strong>www</strong>.example.com</li>"\n        "<li>Si no puedes cargar ninguna p&#225;gina, comprueba la conexi&#243;n de datos o Wi-Fi de tu dispositivo.</li>"\n      "</ul>]]></string>
+  <string name="error_hostLookup_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n        \""<li>"\"Comprueba que la direcci&amp;#243;n no tiene ning&amp;#250;n error como\\n          \""<strong>ww</strong>"\".example.com en vez de\\n          \""<strong>www</strong>.example.com</li>"\"\\n        \""<li>Si no puedes cargar ninguna p&amp;#225;gina, comprueba la conexi&amp;#243;n de datos o Wi-Fi de tu dispositivo.</li>"\"\\n      \""</ul>]]></string>
   <string name="error_malformedURI_title">La dirección no es válida</string>
-  <string name="error_malformedURI_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>"Las direcciones web se suelen escribir as&#237;: "<strong>http://www.example.com/</strong></li>"\n  "<li>Aseg&#250;rate de usar las barras oblicuas (<strong>/</strong>).</li>\n</ul>]]></string>
+  <string name="error_malformedURI_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>\"Las direcciones web se suelen escribir as&amp;#237;: \"<strong>http://www.example.com/</strong></li>"\"\\n  \""<li>Aseg&amp;#250;rate de usar las barras oblicuas (<strong>/</strong>).</li>\\n</ul>]]></string>
   <string name="error_redirectLoop_title">La página no se está redireccionando adecuadamente</string>
-  <string name="error_redirectLoop_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>A veces, el problema se produce por desactivar o no aceptar el uso de cookies.</li>\n</ul>]]></string>
+  <string name="error_redirectLoop_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>A veces, el problema se produce por desactivar o no aceptar el uso de cookies.</li>\\n</ul>]]></string>
   <string name="error_unsupportedprotocol_title">No se entiende la dirección</string>
-  <string name="error_unsupportedprotocol_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>Puede que necesites instalar otro software para abrir esta direcci&#243;n.</li>\n</ul>]]></string>
+  <string name="error_unsupportedprotocol_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>Puede que necesites instalar otro software para abrir esta direcci&amp;#243;n.</li>\\n</ul>]]></string>
   <string name="error_sslhandshake_title">Fallo en la conexión segura</string>
-  <string name="error_sslhandshake_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>Puede que haya un problema con la configuraci&#243;n del servidor o puede\nque alguien est&#233; intentando suplantar al servidor.</li>"\n  "<li>Si ya te hab&#237;as conectado antes a este servidor sin problemas, puede que el error\nsea temporal y puedes intentarlo m&#225;s tarde.</li>\n</ul>]]></string>
+  <string name="error_sslhandshake_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\"\\n  \""<li>Puede que haya un problema con la configuraci&amp;#243;n del servidor o puede\\nque alguien est&amp;#233; intentando suplantar al servidor.</li>"\"\\n  \""<li>Si ya te hab&amp;#237;as conectado antes a este servidor sin problemas, puede que el error\\nsea temporal y puedes intentarlo m&amp;#225;s tarde.</li>\\n</ul>]]></string>
   <string name="error_generic_title">Ups</string>
   <string name="error_generic_message">Por alguna razón, no podemos cargar esta página.</string>
   <string name="contextmenu_link_share">Compartir enlace</string>
@@ -154,7 +155,7 @@
   <string name="contextmenu_image_copy">Copiar dirección de la imagen</string>
   <string name="contextmenu_image_save">Guardar imagen</string>
   <string name="contextmenu_open_in_new_tab">Abrir enlace en una pestaña nueva</string>
-  <string name="contextmenu_image_warning"><![CDATA["Las imágenes guardadas y compartidas "<b xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">no se borrar&#225;n</b>" cuando elimines el historial de %1$s."]]></string>
+  <string name="contextmenu_image_warning"><![CDATA[\"Las imágenes guardadas y compartidas \"<b xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">no se borrar&amp;#225;n</b>\" cuando elimines el historial de %1$s.\"]]></string>
   <string name="firstrun_defaultbrowser_title">Potencia tu privacidad</string>
   <string name="firstrun_defaultbrowser_text2">Lleva la navegación privada al siguiente nivel. Bloquea anuncios y otros contenidos que puedan rastrearte a través de los sitios y ralentizar la carga de las páginas.</string>
   <string name="firstrun_search_title">Tu búsqueda, a tu manera</string>
@@ -178,18 +179,16 @@
   <string name="tabs_tray_action_erase">Eliminar historial de navegación</string>
   <string name="download_firefox">Descargar Firefox</string>
   <string name="your_rights_content1">%1$s es software de código abierto y gratuito, creado por Mozilla y otros colaboradores.</string>
-  <string name="your_rights_content2"><![CDATA["%1$s está disponible de acuerdo con los términos de la "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Licencia p&#250;blica de Mozilla</a>" y otras licencias de código abierto."]]></string>
-  <string name="your_rights_content3"><![CDATA["No tienes ningún derecho o licencia sobre las marcas registradas de la Fundación Mozilla ni cualquier otra parte interesada, incluidos los nombres o logos de Mozilla, Firefox o %1$s. "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Aqu&#237;</a>" puedes encontrar más información."]]></string>
-  <string name="your_rights_content4"><![CDATA["Otras "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">licencias</a>" de código abierto y gratuitas también incluyen código fuente adicional para %1$s."]]></string>
-  <string name="your_rights_content5"><![CDATA["%1$s también utiliza las listas de bloqueo de DIsconnect, Inc. como trabajos separados e independientes bajo la "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Licencia P&#250;blica General de GNU v3</a>" y que puedes encontrar "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">aqu&#237;</a>.]]></string>
+  <string name="your_rights_content2"><![CDATA[\"%1$s está disponible de acuerdo con los términos de la \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Licencia p&amp;#250;blica de Mozilla</a>\" y otras licencias de código abierto.\"]]></string>
+  <string name="your_rights_content3"><![CDATA[\"No tienes ningún derecho o licencia sobre las marcas registradas de la Fundación Mozilla ni cualquier otra parte interesada, incluidos los nombres o logos de Mozilla, Firefox o %1$s. \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Aqu&amp;#237;</a>\" puedes encontrar más información.\"]]></string>
+  <string name="your_rights_content4"><![CDATA[\"Otras \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">licencias</a>\" de código abierto y gratuitas también incluyen código fuente adicional para %1$s.\"]]></string>
+  <string name="your_rights_content5"><![CDATA[\"%1$s también utiliza las listas de bloqueo de DIsconnect, Inc. como trabajos separados e independientes bajo la \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">Licencia P&amp;#250;blica General de GNU v3</a>\" y que puedes encontrar \"<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">aqu&amp;#237;</a>.]]></string>
   <string name="menu_drawer_home">Inicio</string>
   <string name="settings_cookies_dialog_title">Limpiar todas las cookies y datos del sitio</string>
   <string name="settings_cookies_dialog_content">Seleccionar \"Limpiar ahora\" limpiará todas las cookies y datos del sitio guardados por Firefox. Esto puede desconectarle de sitios web y eliminar el contenido web sin conexión.</string>
-
-    <!-- Appended by save_robotranslations.py -->
-    <string name="turbo_mode">Modo Turbo</string>
-    <string name="onboarding_turbo_mode_title">Modo Turbo te ayuda a navegar más rápido</string>
-    <string name="onboarding_turbo_mode_body">El modo Turbo bloquea automáticamente los rastreadores y anuncios para ayudarte a llegar más rápido a donde vas. Si hay un bache de velocidad -como un sitio que no se comporta como esperabas-, sólo tienes que desactivar el modo Turbo Mode.</string>
-    <string name="onboarding_turbo_mode_button_on">Mantener habilitado el modo Turbo</string>
-    <string name="onboarding_turbo_mode_button_off">Apague el modo Turbo</string>
+  <string name="turbo_mode">Modo turbo</string>
+  <string name="onboarding_turbo_mode_title">El modo turbo te ayuda a navegar más rápido</string>
+  <string name="onboarding_turbo_mode_body">El modo turbo bloquea automáticamente rastreadores y anuncios para ayudarte a llegar más rápido a donde vas. Si hay un bache de velocidad, como un sitio que no se comporta como esperabas, solo tienes que desactivar el modo turbo.</string>
+  <string name="onboarding_turbo_mode_button_on">Mantener activado el modo turbo</string>
+  <string name="onboarding_turbo_mode_button_off">Desactivar el modo turbo</string>
 </resources>
