--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,7 +24,7 @@
   <string name="shortcut_erase_short_label">Effacer</string>
   <string name="shortcut_erase_long_label">Effacer l’historique de navigation</string>
   <string name="text_selection_search_action">Faire une recherche privée</string>
-  <string name="about_content"><![CDATA[<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s vous aide &#224; rester aux commandes.</p>\n<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">Utilisez-le comme un navigateur priv&#233;&#160;:\n<ul>\n<li>Effectuez des recherches et naviguez depuis l&#8217;application</li>\n<li>Bloquez les traqueurs (ou modifiez les param&#232;tres pour les autoriser)</li>\n<li>Effacez les cookies, ainsi que les historiques de navigation et de recherche</li>\n</ul>\n</p>\n<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s est r&#233;alis&#233; par Mozilla. Notre mission est de d&#233;fendre l&#8217;ouverture et la bonne sant&#233; d&#8217;Internet.<br/>\n<a href="%2$s">En savoir plus</a></p>]]></string>
+  <string name="about_content"><![CDATA[<p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s vous aide &#224; rester aux commandes.</p><p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">Utilisez-le comme un navigateur priv&#233;&#160;:<ul><li>Effectuez des recherches et naviguez depuis l&#8217;application</li><li>Bloquez les traqueurs (ou modifiez les param&#232;tres pour les autoriser)</li><li>Effacez les cookies, ainsi que les historiques de navigation et de recherche</li></ul></p><p xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">%1$s est r&#233;alis&#233; par Mozilla. Notre mission est de d&#233;fendre l&#8217;ouverture et la bonne sant&#233; d&#8217;Internet.<br/><a href="%2$s">En savoir plus</a></p>]]></string>
   <string name="preference_category_search">Recherche</string>
   <string name="preference_search_engine_default">Par défaut</string>
   <string name="preference_state_on">Activé</string>
@@ -99,6 +99,7 @@
   <string name="accessibility_announcement_search">Ajouter un moteur de recherche</string>
   <string name="search_add_confirmation">Nouveau moteur de recherche ajouté.</string>
   <string name="search_add_error_empty_name">Saisir le nom du moteur de recherche</string>
+  <string name="search_add_error_duplicate_name">Un moteur de recherche du même nom est déjà installé.</string>
   <string name="search_add_error_empty_search">Saisir une chaîne de recherche</string>
   <string name="search_add_error_format">Vérifiez que la chaîne de recherche suit le format de l’exemple</string>
   <string name="content_description_clear_input">Effacer le texte saisi</string>
@@ -134,18 +135,18 @@
   <string name="errorpage_title">Erreur de chargement de la page</string>
   <string name="errorpage_refresh">Réessayer</string>
   <string name="error_connectionfailure_title">La connexion a échoué</string>
-  <string name="error_connectionfailure_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">\n<li>Le site est peut-&#234;tre temporairement indisponible ou surcharg&#233;. R&#233;essayez plus tard&#160;;</li>\n<li>" Si vous n&#8217;arrivez &#224; naviguer sur aucun site, v&#233;rifiez la connexion donn&#233;es ou Wi-Fi de votre appareil."</li>\n</ul>" "]]></string>
+  <string name="error_connectionfailure_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"><li>Le site est peut-&#234;tre temporairement indisponible ou surcharg&#233;. R&#233;essayez plus tard&#160;;</li>\\n<li>Si vous n&#8217;arrivez &#224; naviguer sur aucun site, v&#233;rifiez la connexion donn&#233;es ou Wi-Fi de votre appareil.</li></ul>]]></string>
   <string name="error_timeout_title">Délai de connexion dépassé</string>
   <string name="error_hostLookup_title">Adresse introuvable</string>
-  <string name="error_hostLookup_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">\n<li>"Veuillez v&#233;rifier la syntaxe de l&#8217;adresse (saisie de "<strong>ww</strong>".example.com au lieu de "<strong>www</strong>.example.com par exemple)&#160;;</li>\n<li>Si vous n&#8217;arrivez &#224; naviguer sur aucun site, v&#233;rifiez la connexion donn&#233;es ou Wi-Fi de votre appareil.</li>\n</ul>" "]]></string>
+  <string name="error_hostLookup_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"><li>"Veuillez v&#233;rifier la syntaxe de l&#8217;adresse (saisie de "<strong>ww</strong>".example.com au lieu de "<strong>www</strong>.example.com par exemple)&#160;;</li>\\n<li>Si vous n&#8217;arrivez &#224; naviguer sur aucun site, v&#233;rifiez la connexion donn&#233;es ou Wi-Fi de votre appareil.</li>\\n</ul>]]></string>
   <string name="error_malformedURI_title">L’adresse n’est pas valide</string>
-  <string name="error_malformedURI_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">\n<li>"La syntaxe des adresses web est g&#233;n&#233;ralement "<strong>http://www.example.com/</strong>&#160;;</li>\n<li>"Assurez-vous de bien utiliser des barres obliques (c.-&#224;-d. "<strong>/</strong>).</li>\n</ul>" "]]></string>
+  <string name="error_malformedURI_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"><li>"La syntaxe des adresses web est g&#233;n&#233;ralement "<strong>http://www.example.com/</strong>&#160;;</li>\\n<li>"Assurez-vous de bien utiliser des barres obliques (c.-&#224;-d. "<strong>/</strong>).</li>\\n</ul>]]></string>
   <string name="error_redirectLoop_title">La page n’est pas redirigée correctement</string>
-  <string name="error_redirectLoop_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>La cause de ce probl&#232;me peut &#234;tre la d&#233;sactivation ou le refus des cookies.</li>\n</ul>\n]]></string>
+  <string name="error_redirectLoop_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"><li>La cause de ce probl&#232;me peut &#234;tre la d&#233;sactivation ou le refus des cookies.</li></ul>]]></string>
   <string name="error_unsupportedprotocol_title">L’adresse n’a pas été reconnue</string>
-  <string name="error_unsupportedprotocol_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">"\n  "<li>Il est peut-&#234;tre n&#233;cessaire d&#8217;installer une autre application pour ouvrir ce type d&#8217;adresse.</li>\n</ul>\n]]></string>
+  <string name="error_unsupportedprotocol_message"><![CDATA[<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"><li>Il est peut-&#234;tre n&#233;cessaire d&#8217;installer une autre application pour ouvrir ce type d&#8217;adresse.</li></ul>]]></string>
   <string name="error_sslhandshake_title">Échec de la connexion sécurisée</string>
-  <string name="error_sslhandshake_message"><![CDATA[" "<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">" "<li>Ceci peut &#234;tre d&#251; &#224; un probl&#232;me de configuration du serveur ou &#224; une personne essayant d&#8217;usurper l&#8217;identit&#233; du serveur.</li>" "<li>Si vous avez d&#233;j&#224; pu vous connecter &#224; ce serveur, l&#8217;erreur est peut-&#234;tre temporaire et vous pouvez essayer &#224; nouveau plus tard.</li>" "</ul>" "]]></string>
+  <string name="error_sslhandshake_message"><![CDATA[\" \"<ul xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">\" \"<li>Ceci peut &#234;tre d&amp;#251; &#224; un probl&#232;me de configuration du serveur ou &#224; une personne essayant d&#8217;usurper l&#8217;identit&#233; du serveur.</li>\" \"<li>Si vous avez d&#233;j&#224; pu vous connecter &#224; ce serveur, l&#8217;erreur est peut-&#234;tre temporaire et vous pouvez essayer &#224; nouveau plus tard.</li>\" \"</ul>\" \"]]></string>
   <string name="error_generic_title">La requête ne peut aboutir</string>
   <string name="error_generic_message">Pour une raison inconnue, nous ne pouvons pas charger cette page.</string>
   <string name="contextmenu_link_share">Partager le lien</string>
@@ -183,13 +184,11 @@
   <string name="your_rights_content4"><![CDATA["Le code source complémentaire pour %1$s est disponible sous différentes "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">licences</a>" libres et open source."]]></string>
   <string name="your_rights_content5"><![CDATA["%1$s utilise aussi des listes de blocage fournies par Disconnect Inc, en tant que créations sous la licence "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%2$s">GNU General Public License v3</a>" et qui sont disponibles "<a xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" href="%3$s">ici</a>.]]></string>
   <string name="menu_drawer_home">Accueil</string>
-  <string name="settings_cookies_dialog_title">Effacer les cookies et les données des sites</string>
-  <string name="settings_cookies_dialog_content">En cliquant sur « Effacer maintenant », vous effacerez toutes les données des sites et tous les cookies stockés par Firefox. Cette action peut vous déconnecter de certains sites et supprimer du contenu web disponible hors connexion.</string>
-
-    <!-- Appended by save_robotranslations.py -->
-    <string name="turbo_mode">Mode turbo</string>
-    <string name="onboarding_turbo_mode_title">Le mode turbo vous permet de naviguer plus rapidement</string>
-    <string name="onboarding_turbo_mode_body">Le mode turbo bloque automatiquement les traqueurs et les publicités pour que les pages web se chargent plus vite. S’il y a un hic (comme un site web qui ne fonctionne pas comme vous l’espériez), il vous suffit de désactiver le mode turbo.</string>
-    <string name="onboarding_turbo_mode_button_on">Laisser le mode turbo activé</string>
-    <string name="onboarding_turbo_mode_button_off">Désactiver le mode turbo</string>
+  <string name="settings_cookies_dialog_title">Effacer les cookies et les données de sites</string>
+  <string name="settings_cookies_dialog_content">En cliquant sur « Effacer maintenant », vous effacerez toutes les données de sites et tous les cookies stockés par Firefox pour Fire TV. Cette action peut vous déconnecter de certains sites et supprimer du contenu web disponible hors connexion.</string>
+  <string name="turbo_mode">Mode turbo</string>
+  <string name="onboarding_turbo_mode_title">Le mode turbo vous permet de naviguer plus rapidement</string>
+  <string name="onboarding_turbo_mode_body">Le mode turbo bloque automatiquement les traqueurs et les publicités pour que les pages web se chargent plus vite. S’il y a un hic (comme un site web qui ne fonctionne pas comme vous l’espériez), il vous suffit de désactiver le mode turbo.</string>
+  <string name="onboarding_turbo_mode_button_on">Laisser le mode turbo activé</string>
+  <string name="onboarding_turbo_mode_button_off">Désactiver le mode turbo</string>
 </resources>
